--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-countup": "^6.4.0",
     "react-datepicker": "^4.8.0",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.4.5",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
     "tailwind-animatecss": "^1.0.0",
     "tailwindcss": "^3.2.4",
