--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "flowbite-datepicker": "^1.2.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-countup": "^6.4.0",
